@@ -1,13 +1,11 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
               'NAME'	=> 'WWW::Search::Ebay',
-              'VERSION' => '2.07',
+              'VERSION' => '2.08',
               'PREREQ_PM' => {
-                              'HTML::Form' => 0,
-                              'HTML::TreeBuilder' => 3,
                               # The module's version, not the
                               # distribution's version:
-                              'WWW::Search' => 2.18,
+                              'WWW::Search' => 2.27,
                               'WWW::Search::Test' => 2.12,
                              },
              );
